=================
Changes for Crate
=================

Unreleased
==========

 - include jts and spatial4j in client jar in order to properly use 
   the ``geopoint`` type

 - produce a crate-client with all dependencies included under the 'io.crate'
   package namespace in order to avoid conflicts

 - Fix: select queries querying for the primary key on custom schemas did now
   return the correct results

 - Fixed an issue that caused ``where somefield in (null)`` to match all rows

 - Fix: Do not shutdown the BulkShardProcessor while there are pending requests
   anymore

 - Fix: The ``format`` scalar function now always uses Locale.ENGLISH

 - Fixed misleading error message for trying to group by invalid data type.

2015/03/13 0.47.7
=================

 - Fixed an issue where statements wouldn't work correctly if tables of a
   custom schema are involved

 - IN operator NULL literals bug fix

 - Fixed an ip validator bug that marked some valid ip's as invalid.

 - Fixed an issue with concurrent INSERT requests that could fail due to using
   a shared state internally.

2015/03/11 0.47.6
=================

 - Fixed an issue with custom schemas that could cause select statements on the
   ``information_schema.tables`` table to result in a NPE.

 - Fixed an issue that could cause the response to contain the wrong types
   (e.g. integer instead of long)

 - Fix: Sorting on a scalar with a column containing NULL values as
   argument no longer throws an NPE

 - Fix: group by on clustered by column on a partitioned table now produces
   correct results for groups spanning different partitions

 - Fixed an issue that caused errors to be swallowed and caused queries to not
   terminate correctly.

 - Fix: COPY FROM and INSERT from subquery into a partitioned table created
   separate tables with a wrong name instead of correct partitions

2015/03/09 0.47.5
=================

 - Upgrade Elasticsearch to v1.4.4
